Use new img command and delete two duplicate files in supervised
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/actors/gafa.tex
+++ b/shared/latex/actors/gafa.tex
@@ -16,24 +16,24 @@
 
 \begin{frame}
   \frametitle{La recherche académique}
-  \imgth{citation-nips-2005-2016}{0.85}
+  \V{["citation-nips-2005-2016", "th", 0.85] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{La recherche académique privatisée}
-  \imgth{citation-nips-2005-2016-team}{0.85}
+  \V{["citation-nips-2005-2016-team", "th", 0.85] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Les acteurs business du machine learning}
   Acteurs de la recherche en machine learning
-  \imgth{acquisition-gafa}{0.8}
+  \V{["acquisition-gafa", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Les acteurs business}
   IBM et Watson
-  \imgtw{jeopardy-watson}{0.6}
+  \V{["jeopardy-watson", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}
@@ -54,7 +54,7 @@
     \item Chatbots préconfigurés
     \end{itemize}
   \end{minipage}\hfill
-  \imgtw{watson-personality-insight}{0.75}
+  \V{["watson-personality-insight", "tw", 0.75] | image}
 \end{frame}
 
 \begin{frame}
@@ -72,13 +72,13 @@
 \begin{frame}
   \frametitle{Les acteurs business}
   IBM et Watson
-  \imgtw{ibm-watson-struct}{1}
+  \V{["ibm-watson-struct", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Les acteurs business}
   Microsoft Azure
-  \imgtw{ms-azure}{1}
+  \V{["ms-azure", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
@@ -86,13 +86,13 @@
   Microsoft Azure
   \newline
   (Déc 2018) supporte scikit-learn, PyTorch et TensorFlow
-  \imgtw{ms-azure2}{1}
+  \V{["ms-azure2", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Les acteurs business}
   Amazon
-  \imgtw{amazon-ai}{0.9}
+  \V{["amazon-ai", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
