--- a/shared/latex/actors/startup.tex
+++ b/shared/latex/actors/startup.tex
@@ -1,16 +1,16 @@
 \begin{frame}
   \frametitle{Tendance}
-  \imgtw{trends-ia-tektonik}{1}
+  \V{["trends-ia-tektonik", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{World Map}
-  \imgtw{ia-landscape-2018}{1}
+  \V{["ia-landscape-2018", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{French Map}
-  \imgtw{ia-landscape-fr-2018-2}{1}
+  \V{["ia-landscape-fr-2018-2", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
