--- a/shared/latex/auto-encoders/autoencoder.tex
+++ b/shared/latex/auto-encoders/autoencoder.tex
@@ -1,31 +1,31 @@
 \begin{frame}{Schéma général}
-  \imgtw{autoencoder-schema}{0.9}
+  \V{["autoencoder-schema", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Cas linéaire}
   Activations linéaires et fonction de perte moindre carrés $\approx$ ACP
 
-  \imgtw{pca-nuage}{0.6}
+  \V{["pca-nuage", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs profonds}
   Aussi appelées auto-encodeurs empilés.
 
-  \imgtw{autoencoder-stacked}{0.9}
+  \V{["autoencoder-stacked", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs débruiteurs}
-  \imgtw{autoencoder-denoising}{0.9}
+  \V{["autoencoder-denoising", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs épars}
-  \imgtw{autoencoder-sparse}{0.7}
+  \V{["autoencoder-sparse", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs variationnels}
-  \imgtw{autoencoder-variational}{0.9}
+  \V{["autoencoder-variational", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs LSTM}
-  \imgtw{autoencoder-lstm}{0.9}
+  \V{["autoencoder-lstm", "tw", 0.9] | image}
 \end{frame}
