--- a/shared/latex/big-questions/generic.tex
+++ b/shared/latex/big-questions/generic.tex
@@ -11,7 +11,7 @@
 
 \begin{frame}{Données}
   Les \textbf{données} coûtent cher (récolte, nettoyage, \#Data~>~1M). 
-  \imgth{amazon-mechanical-turc}{0.5}
+  \V{["amazon-mechanical-turc", "th", 0.5] | image}
 \end{frame}
 
 \begin{frame}{Temps long de l'apprentissage}
@@ -22,19 +22,19 @@
     \item Pas de résultats concluants au premier run
   \end{itemize}
   \onslide<+->{$\rightarrow$ Peu de visibilité sur le temps d'obtention d'une plus value
-  \imgth{sablier-windows}{0.6}}
+  \V{["sablier-windows", "th", 0.6] | image}}
 \end{frame}
 
 \begin{frame}{Infrastructure}
   L'utilisation de GPU/TPU coûte cher… et ça ne s'arrange pas avec l'explosion du besoin par le minage de cryptomonnaies
-  \imgth{nvidia-stock-history}{0.45}
+  \V{["nvidia-stock-history", "th", 0.45] | image}
   \begin{center}
     \small Cours de l'action NVIDIA
   \end{center}
 \end{frame}
 
 \begin{frame}{Faisabilité}
-  \imgth{xkcd-easy-impossible}{0.8}
+  \V{["xkcd-easy-impossible", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Recrutement}
@@ -49,18 +49,18 @@
     ~
   \end{minipage}\hfill
   \begin{minipage}[l]{0.44\linewidth}
-    \imgth{data-scientist-star}{0.35}
+    \V{["data-scientist-star", "th", 0.35] | image}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}{Acceptation}
   Utilisateurs prêts à accepter un algorithme qui fait des erreurs ?
-  \imgth{robotdoc}{0.7}
+  \V{["robotdoc", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Acceptation}
   Utilisateurs prêts à accepter un algorithme qui fait des erreurs ?
-  \imgth{google-ceo-congress}{0.65}
+  \V{["google-ceo-congress", "th", 0.65] | image}
 \end{frame}
 
 \begin{frame}{Interprétabilité}
@@ -68,5 +68,5 @@
 
   Réseaux de neurones $\iff$ enchaînement de multiplications matricielles avec des millions de paramètres.
 
-  \imgtw{deep-auto-encoder}{0.9}
+  \V{["deep-auto-encoder", "tw", 0.9] | image}
 \end{frame}
