--- a/shared/latex/big-questions/legal.tex
+++ b/shared/latex/big-questions/legal.tex
@@ -1,5 +1,5 @@
 \begin{frame}{CNIL}
-  \imgtw{cnil-logo}{0.8}
+  \V{["cnil-logo", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Comité éthique \& intelligence artificielle}
@@ -16,7 +16,7 @@
 
 \begin{frame}{RGPD}
   Introduit en 2018 par le parlement européen.
-  \imgtw{rgpd}{0.8}
+  \V{["rgpd", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Loi bioéthique}
