--- a/shared/latex/engineering/engineering-practices.tex
+++ b/shared/latex/engineering/engineering-practices.tex
@@ -1,9 +1,9 @@
 \begin{frame}{Pipeline d'un projet de Machine Learning}
-  \imgtw{ml-craftmanship}{0.8}
+  \V{["ml-craftmanship", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Complexification des solutions : retours dégressifs}
-  \imgtw{ml-effort-vs-value}{0.8}
+  \V{["ml-effort-vs-value", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Caractéristiques et buts différents}
