--- a/shared/latex/intelligence-artificielle/historique.tex
+++ b/shared/latex/intelligence-artificielle/historique.tex
@@ -1,79 +1,79 @@
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{XVIème} : Le mythe du Golem
-  \imgtw{mythe-du-golem}{1}
+  \V{["mythe-du-golem", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1913} : Chaînes de Markov
-  \imgth{markov}{0.8}
+  \V{["markov", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1950} : Alan Turing
-  \imgth{alan-turing}{0.6}
+  \V{["alan-turing", "th", 0.6] | image}
   précurseur de l'informatique, test de Turing
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1957} : Le Perceptron de Rosenblatt
-  \imgth{perceptron}{0.6}
+  \V{["perceptron", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1972} :  TF-IDF
-  \imgtw{tf-idf}{1}
+  \V{["tf-idf", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1986} : Rétropopagation du gradient de l'erreur (popularisation)
-  \imgth{backpropagation}{0.6}
+  \V{["backpropagation", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1990} : \textbf{Lenet} de Lecun : premier résau de convolution (\textbf{CNN})
-  \imgtw{cnn-schema}{1}
+  \V{["cnn-schema", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1995} : Machine à vecteurs support de Vapnik (\textbf{SVM})
-  \imgth{svm-schema}{0.6}
+  \V{["svm-schema", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{1997} : Deep Blue bat Kasparov
-  \imgtw{deepblue-kasparov}{0.8}
+  \V{["deepblue-kasparov", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{2011} : IBM-Watson
-  \imgtw{jeopardy-watson}{0.6}
+  \V{["jeopardy-watson", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{2012} : Le ``neurone du chat'' dans un \textbf{CNN}
-  \imgtw{googlebrain}{0.6}
+  \V{["googlebrain", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{2016} : AlphaGo vs Lee Sedol
-  \imgtw{alphago-sedol}{0.6}
+  \V{["alphago-sedol", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Du mythe à aujourd'hui}
   \textbf{2019} : Pluribus vs Pro (Chris Ferguson, Darren Elias,...)
-  \imgtw{poker-bots}{0.6}
+  \V{["poker-bots", "tw", 0.6] | image}
 \end{frame}
 
