--- a/shared/latex/intelligence-artificielle/intro.tex
+++ b/shared/latex/intelligence-artificielle/intro.tex
@@ -7,7 +7,7 @@
 
 \begin{frame}
   \frametitle{Préambule à l'intelligence artificielle}
-  \imgtwl{larousse}{0.2}
+  \V{["larousse", "twl", 0.2] | image}
   \underline{\textbf{Intelligence}} :
   \begin{itemize}
   \item Ensemble des fonctions mentales ayant pour objet la connaissance conceptuelle et rationnelle
@@ -35,7 +35,7 @@
 
 \begin{frame}
   \frametitle{Préambule à l'intelligence artificielle}
-  \imgth{memoire-fun}{0.6}
+  \V{["memoire-fun", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
@@ -54,7 +54,7 @@
 
 \begin{frame}
   \frametitle{Préambule à l'intelligence artificielle}
-  \imgth{conceptualisation}{0.6}
+  \V{["conceptualisation", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
@@ -73,7 +73,7 @@
 
 \begin{frame}
   \frametitle{Préambule à l'intelligence artificielle}
-  \imgtw{foot-keeper-penalty}{0.8}
+  \V{["foot-keeper-penalty", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
