--- a/shared/latex/machine-learning/data-preparation.tex
+++ b/shared/latex/machine-learning/data-preparation.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Introduction}
-  \imgtw{ml-craftmanship}{0.8}
+  \V{["ml-craftmanship", "tw", 0.8] | image}
 \end{frame}
 
 
@@ -187,15 +187,15 @@
 \end{frame}
 
 \begin{frame}{Outils — count plot}
-  \imgtw{countplot}{1}
+  \V{["countplot", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Outils — dist plot}
-  \imgtw{distplot}{1}
+  \V{["distplot", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Outils — qq plot}
-  \imgtw{qqplot}{1}
+  \V{["qqplot", "tw", 1] | image}
   Attention, pas \bluelink{https://seaborn.pydata.org/}{\texttt{seaborn}}
   mais
   \bluelink{http://www.statsmodels.org/stable/index.html}{\texttt{statsmodel}}
@@ -204,23 +204,23 @@
 \end{frame}
 
 \begin{frame}{Outils — bar plot}
-  \imgtw{barplot}{1}
+  \V{["barplot", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Outils — scatter plot}
-  \imgtw{scatter}{.7}
+  \V{["scatter", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Outils — violin plot}
-  \imgtw{violinplot}{1}
+  \V{["violinplot", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Outils — pair plot}
-  \imgtw{pairplot}{.65}
+  \V{["pairplot", "tw", 0.65] | image}
 \end{frame}
 
 \begin{frame}{Outils — correlation matrix}
-  \imgtw{corrmat}{.8}
+  \V{["corrmat", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Mode opératoire}
