--- a/shared/latex/machine-learning/evaluation.tex
+++ b/shared/latex/machine-learning/evaluation.tex
@@ -17,20 +17,20 @@
 
 \begin{frame}
   \frametitle{Précision, rappel}
-  \imgth{precisionrecall}{0.8}
+  \V{["precisionrecall", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Courbe ROC}
-  \imgtw{roc}{.6}
+  \V{["roc", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Analyse d'une courbe ROC}
-  \imgtw{roc-space}{.6}
+  \V{["roc-space", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Matrice de confusion}
-  \imgtw{confusion-matrix}{.6}
+  \V{["confusion-matrix", "tw", 0.6] | image}
 \end{frame}
