--- a/shared/latex/machine-learning/intro.tex
+++ b/shared/latex/machine-learning/intro.tex
@@ -1,9 +1,9 @@
 \begin{frame}{Un domaine vaste}
-  \imgtw{data-science}{1}
+  \V{["data-science", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Hiérarchie des noms}
-  \imgth{ia-ml-deep}{0.8}
+  \V{["ia-ml-deep", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Machine Learning}
@@ -15,11 +15,11 @@
 \end{frame}
 
 \begin{frame}{Ingénierie}
-  \imgtw{ml-craftmanship}{0.8}
+  \V{["ml-craftmanship", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Matière première : les données}
-  \imgtw{variables}{0.8}
+  \V{["variables", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Grandes familles}
@@ -43,40 +43,39 @@
   Apprendre une \textbf{stratégie} efficace dans un \textbf{univers} où les \textbf{actions} fournissent des \textbf{récompenses} (possiblement négatives)
   \vfill
   \begin{minipage}[l]{0.39\linewidth}
-    \imgtw{echec}{0.8}
+    \V{["echec", "tw", 0.8] | image}
   \end{minipage}
   \begin{minipage}[l]{0.59\linewidth}
-    \imgtw{darpa-urban-challenge}{0.75}
+    \V{["darpa-urban-challenge", "tw", 0.75] | image}
   \end{minipage}
 \end{frame}
 
 \begin{frame}{Exemple --- Régression linéaire}
   Prédire une valeur en fonction d'une autre
 
-  \imgth{regression-line-1}{0.7}
+  \V{["regression-line-1", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Exemple --- Régression linéaire multiple}
   Prédire une valeur en fonction de plusieurs autres
 
-  \imgth{regression-hyperplan}{0.8}
+  \V{["regression-hyperplan", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Exemple --- Classification avec des réseaux à convolutions}
-  
-  \img{cnn-schema}
+  \V{"cnn-schema" | image}
 \end{frame}
 
 \begin{frame}{Exemple --- Classification avec des réseaux à convolutions}
-  \imgtw{caltech256}{0.8}
+  \V{["caltech256", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Exemple --- Apprentissage par renforcement}
-  \imgtw{alphazero}{0.8}
+  \V{["alphazero", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Topologie du domaine}
-  \imgtw{ml-illustration}{0.8}
+  \V{["ml-illustration", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Points de vue}
