--- a/shared/latex/machine-learning/math-stats.tex
+++ b/shared/latex/machine-learning/math-stats.tex
@@ -9,7 +9,7 @@
 
 \begin{frame}
   \frametitle{Types de variables}
-  \imgtw{variables}{1}
+  \V{["variables", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
@@ -54,7 +54,7 @@
 
   Pour les lois normales :
 
-  \imgth{68-95-99,7}{.7}
+  \V{["68-95-99,7", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}[fragile]
@@ -71,7 +71,7 @@
 \begin{frame}[fragile]
   \frametitle{Boxplot}
 
-  \imgth{boxplot}{.9}
+  \V{["boxplot", "th", 0.9] | image}
 \end{frame}
 
 \begin{frame}[fragile]
@@ -118,7 +118,7 @@
 \begin{frame}
   \frametitle{Asymétrie}
 
-  \imgtw{skew}{1}
+  \V{["skew", "tw", 1] | image}
 
   \[
     \asym(X) = \mathbb{E} \left[\left(\frac{X - \bar{X}}{\sigma}\right)^3\right]
@@ -128,7 +128,7 @@
 \begin{frame}
   \frametitle{Kurtosis}
 
-  \imgth{kurtosis}{.5}
+  \V{["kurtosis", "th", 0.5] | image}
 
   \[
     \kurt(X) = \mathbb{E} \left[\left(\frac{X - \mu}{\sigma}\right)^4\right]
