--- a/shared/latex/natural-language-processing/preprocessing.tex
+++ b/shared/latex/natural-language-processing/preprocessing.tex
@@ -26,15 +26,15 @@
 \end{frame}
 
 \begin{frame}{Étiquetage morpho-syntaxique}
-  \imgtw{pos-tagging}{0.8}
+  \V{["pos-tagging", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Reconnaissance d'entités nommées}
-  \imgtw{named-entity-recognition}{0.8}
+  \V{["named-entity-recognition", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Analyse syntaxique}
-  \imgtw{parse-tree}{0.8}
+  \V{["parse-tree", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Lemmatisation}
@@ -53,22 +53,22 @@
 
 \begin{frame}
   \frametitle{Outlis --- WordNet}
-  \imgth{wordnet-1}{0.7}  
+  \V{["wordnet-1", "th", 0.7] | image}  
   Projet sur le français : WOLF (Wordnet Libre du Français) 
 \end{frame}
 
 \begin{frame}
   \frametitle{Outils --- DBpedia}
-  \imgtw{dbpedia}{0.9}
+  \V{["dbpedia", "tw", 0.9] | image}
 \end{frame}
 
 \fmg{\begin{frame}
   \frametitle{Utilisation actuelle}
-  \imgtw{chatbot}{0.9}
+  \V{["chatbot", "tw", 0.9] | image}
 \end{frame}}
 
 \fmg{\begin{frame}
   \frametitle{Maintenabilité}
-  \imgtw{usine-a-gaz}{0.9}
+  \V{["usine-a-gaz", "tw", 0.9] | image}
 \end{frame}}
 
