--- a/shared/latex/natural-language-processing/similarity-text.tex
+++ b/shared/latex/natural-language-processing/similarity-text.tex
@@ -49,5 +49,5 @@
 
 \begin{frame}
   \frametitle{Produit Scalaire sur TF-IDF}
-  \imgtw{cosinus-similarity}{0.9}
+  \V{["cosinus-similarity", "tw", 0.9] | image}
 \end{frame}
