--- a/shared/latex/natural-language-processing/usages-nlp.tex
+++ b/shared/latex/natural-language-processing/usages-nlp.tex
@@ -1,43 +1,43 @@
 
 \begin{frame}{Cas d'usage --- Transcription et synthèse de la parole}
-  \imgtw{smart-assistants}{0.6}
+  \V{["smart-assistants", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Identification du locuteur}
-  \imgtw{id-locuteur}{0.6}
+  \V{["id-locuteur", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Chatbot}
-  \imgtw{zo}{0.6}
+  \V{["zo", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Moteur de recherche}
-  \imgtw{deep-moteur-recherche}{0.6}
+  \V{["deep-moteur-recherche", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Extraction de données}
-  \imgtw{information-extraction}{0.6}
+  \V{["information-extraction", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Analyse de sentiments}
-  \imgtw{sentiment-analysis}{0.6}
+  \V{["sentiment-analysis", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Résumé}
-  \imgtw{auto-summary}{0.8}
+  \V{["auto-summary", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Cas d'usage --- Traduction}
   \begin{center}
-    \imgtw{traduction-fr-en-short}{1.1}
+    \V{["traduction-fr-en-short", "tw", 1.1] | image}
   \end{center}
 \end{frame}
 
 \begin{frame}{État de l'art --- Vers 2015}
-  \imgtw{nlp-tech-resume}{1}
+  \V{["nlp-tech-resume", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{État de l'art --- 2019}
-  \imgtw{nlp-tech-resume-2019}{1}
+  \V{["nlp-tech-resume-2019", "tw", 1] | image}
 \end{frame}
 
