--- a/shared/latex/natural-language-processing/vectors.tex
+++ b/shared/latex/natural-language-processing/vectors.tex
@@ -16,7 +16,7 @@
 
 \begin{frame}{TF-IDF --- Intérêt de $df_i$}
   Loi de Zipf, justifiant l'utilisation du terme $df_i$
-  \imgtw{zipf-law}{0.9}
+  \V{["zipf-law", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{TF-IDF}
@@ -65,12 +65,12 @@
 
 \begin{frame}
   \frametitle{Word Embeddings} 
-  \imgtw{word2vec}{1}
+  \V{["word2vec", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Word Embeddings} 
-  \imgtw{word2vec-analogy}{0.6}
+  \V{["word2vec-analogy", "tw", 0.6] | image}
   \begin{center}
     \bluelink{https://projector.tensorflow.org/}{Visualisation de l'espace word2vec} \\
     \bluelink{http://vectors.nlpl.eu/repository/}{Word Embeddings à télécharger}
