--- a/shared/latex/neural-networks/cnn-data.tex
+++ b/shared/latex/neural-networks/cnn-data.tex
@@ -1,39 +1,39 @@
 \begin{frame}{MNIST}
   810k caractères manuscrits
-  \imgth{mnist}{0.6}
+  \V{["mnist", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Caltech 256}
   300k objets/animaux/personnes
-  \imgth{caltech256}{0.7}
+  \V{["caltech256", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Street View House Numbers}
   600k numéros annotés
-  \imgth{streetviewdataset}{0.7}
+  \V{["streetviewdataset", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{ImageNet}
   ~12M images annotés par synset de wordnet
-  \imgth{imagenet}{0.7}
+  \V{["imagenet", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{MS-COCO}
    330k images avec annotation+segmentation
-  \imgtw{ms-coco}{1}
+  \V{["ms-coco", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{VisualQA}
   265k images, Question answering
-  \imgth{visual-qa}{0.7}
+  \V{["visual-qa", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Open Images}
   9M images annotées avec 6000 catégories
-  \imgth{openimage}{0.7}
+  \V{["openimage", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{MS-Celeb-1M}
   10M photos de 100k célebrités
-  \imgth{ms-celeb}{0.7}
+  \V{["ms-celeb", "th", 0.7] | image}
 \end{frame}
