--- a/shared/latex/neural-networks/deep-optimize.tex
+++ b/shared/latex/neural-networks/deep-optimize.tex
@@ -1,16 +1,16 @@
 \begin{frame}{Disparition du gradient (ou son explosion)}
-  \imgtw{vanishing-gradient3}{1.0}
+  \V{["vanishing-gradient3", "tw", 1.0] | image}
 \end{frame}
 
 \begin{frame}{Disparition des gradients}
   Vanishing Gradient $\Rightarrow$ utilisation de ReLu plutôt que les sigmoïdes
   \vfill
-  \imgtw{activations/relu}{1}
+  \V{["activations/relu", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Explosion des gradients}
   Exploding Gradient $\Rightarrow$ Gradient clipping
-  \imgtw{gradient-clipping}{0.9}
+  \V{["gradient-clipping", "tw", 0.9] | image}
   Dans le cadre des réseaux réccurents $\Rightarrow$ initialisation avec des matrices orthogonales
 \end{frame}
 
