--- a/shared/latex/neural-networks/gan-intro.tex
+++ b/shared/latex/neural-networks/gan-intro.tex
@@ -1,13 +1,13 @@
 \begin{frame}{Que voyez-vous ?}
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw{gan-horse-zebra}{1.0}
+    \V{["gan-horse-zebra", "tw", 1.0] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw{gan-zebra-horse}{1.0}
+    \V{["gan-zebra-horse", "tw", 1.0] | image}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}{Que voyez-vous ?}
-  \imgth{gan-faux-visages}{0.8}
+  \V{["gan-faux-visages", "th", 0.8] | image}
 \end{frame}
 
