--- a/shared/latex/neural-networks/gan-model.tex
+++ b/shared/latex/neural-networks/gan-model.tex
@@ -1,12 +1,12 @@
 \begin{frame}{Génération de visages}
-  \imgth{gan-faux-visages}{0.8}
+  \V{["gan-faux-visages", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Génération Zèbre $\iff$ Cheval}
-  \imgth{cyclegan}{0.8}
+  \V{["cyclegan", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Schéma des Generative Adverserial Networks}
   Le générateur n'a jamais vu les vraies données !
-  \imgtw{gan-schema}{0.8}
+  \V{["gan-schema", "tw", 0.8] | image}
 \end{frame}
