--- a/shared/latex/neural-networks/intro.tex
+++ b/shared/latex/neural-networks/intro.tex
@@ -1,13 +1,13 @@
 \begin{frame}{Lien avec la régression linéaire}
-  \imgtw{regression-10}{0.9}
+  \V{["regression-10", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Lien avec la régression linéaire}
-  \imgtw{separable-problem-linear-solution}{0.9}
+  \V{["separable-problem-linear-solution", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Lien avec la régression linéaire}
-  \imgtw{xor}{0.9}
+  \V{["xor", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Lien (ténu) avec la biologie}
@@ -15,7 +15,7 @@
 \end{frame}
 
 \begin{frame}{Modélisation d'un neurone}
-  \imgtw{neuron-model}{0.9}
+  \V{["neuron-model", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Modélisation d'un réseau de neurones}
@@ -36,22 +36,22 @@
 
 \begin{frame}{Réseau sans couche cachée}
   \centering
-  \imgtw{neural-networks/shallow-ff}{1}
+  \V{["neural-networks/shallow-ff", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Réseau avec une couche cachée}
   \centering
-  \imgtw{neural-networks/one-hidden-layer-ff}{1}
+  \V{["neural-networks/one-hidden-layer-ff", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Réseau profond}
   \centering
-  \imgtw{neural-networks/deep-ff}{1}
+  \V{["neural-networks/deep-ff", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Un potentiel infini}
   \textbf{Kurt Hornik, 1991~:} Théorème d'approximation universelle
-  \imgtw{universal-approximation}{0.8}
+  \V{["universal-approximation", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Démonstration}
@@ -148,7 +148,7 @@
 
 \begin{frame}{Fonctions d'activation --- Sigmoïde}
   \begin{center}
-    \imgtw{activations/sigmoid}{1}
+    \V{["activations/sigmoid", "tw", 1] | image}
   \end{center}
 
   \begin{description}[<+->]
@@ -159,7 +159,7 @@
 
 \begin{frame}{Fonctions d'activation --- Tangente hyperbolique}
   \begin{center}
-    \imgtw{activations/tanh}{1}
+    \V{["activations/tanh", "tw", 1] | image}
   \end{center}
 
   \begin{description}[<+->]
@@ -170,7 +170,7 @@
 
 \begin{frame}{Fonctions d'activation --- ReLU}
   \begin{center}
-    \imgtw{activations/relu}{0.6}
+    \V{["activations/relu", "tw", 0.6] | image}
   \end{center}
 
   \begin{description}[<+->]
@@ -181,7 +181,7 @@
 
 \begin{frame}{Fonctions d'activation --- Approximation d'une fonction}
   \centering
-    \imgtw{activations/approximation}{1}
+    \V{["activations/approximation", "tw", 1] | image}
   {\small
     \begin{align*}
       n_1 & = \ReLU(-5x - 7.7) & n_4 & = \ReLU(1.2x - 0.2) \\
