--- a/shared/latex/neural-networks/optimize.tex
+++ b/shared/latex/neural-networks/optimize.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Qu'est-ce qu'un hyper-paramètre~?}
   \begin{columns}
     \begin{column}[c]{0.5\textwidth}
-      \imgtw{neural-networks/deep-ff-notext}{1}
+      \V{["neural-networks/deep-ff-notext", "tw", 1] | image}
     \end{column}
     \begin{column}[c]{0.5\textwidth}
       \begin{itemize}
@@ -24,7 +24,7 @@
     trop petit
   \end{minipage}\hfill
 
-  \imgtw{learning-rate-big-small}{1}
+  \V{["learning-rate-big-small", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Learning rate}
@@ -34,7 +34,7 @@
 
 \begin{frame}{Taille du batch}
   Usuellement, des puissances de 2, pour optimiser les ressources GPU
-  \imgtw{batch-size-effect}{0.8}
+  \V{["batch-size-effect", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Taille des couches}
