--- a/shared/latex/neural-networks/regularisation.tex
+++ b/shared/latex/neural-networks/regularisation.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Sur-apprentissage (et sous-apprentissage)}
-  \imgtw{over-underfitting}{0.6}
+  \V{["over-underfitting", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Par la pénalisation de l'utilisation des paramètres}
@@ -14,21 +14,21 @@
 \end{frame}
 
 \begin{frame}{Par early stopping}
-  \imgtw{early-stopping}{0.6}
+  \V{["early-stopping", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Par augmentation/bruitage des données}
-  \imgtw{data-augmentation}{0.8}
+  \V{["data-augmentation", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Par dropout}
-  \imgtw{dropout-2}{0.8}
+  \V{["dropout-2", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{En entraînant sur plusieurs tâches}
-  \imgtw{multi-task-v2}{0.8}
+  \V{["multi-task-v2", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{En opposant des réseaux de neurones}
-  \imgtw{gan-schema}{0.8}
+  \V{["gan-schema", "tw", 0.8] | image}
 \end{frame}
