--- a/shared/latex/recommander-system/filtrage-colaboratif-user-based.tex
+++ b/shared/latex/recommander-system/filtrage-colaboratif-user-based.tex
@@ -23,7 +23,7 @@
   Principe : Une bonne recommandation est faite à partir d'individus similaires\\
   \newline
   Condition : Avoir un échantillon important d'individus représentatifs
-  \imgtw{amazon_logo}{0.6}
+  \V{["amazon_logo", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}
