--- a/shared/latex/sectors/coding.tex
+++ b/shared/latex/sectors/coding.tex
@@ -1,13 +1,13 @@
 \begin{frame}
   \frametitle{Informatique et Machine Learning}
   La mutation du secteur informatique par l'intelligence artificielle
-  \imgtw{it-ai}{0.8}
+  \V{["it-ai", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Informatique et Machine Learning}
   DeepMind réduit de 40\% la consommation des datacenter Google
-  \imgtw{deepmind-energy-consumption}{0.8}
+  \V{["deepmind-energy-consumption", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -15,7 +15,7 @@
   2018 était l'année du Machine Learning en cybersécurité (Mc Afee)
   \newline
   Outils ML en cybersécurité : 10\% à 60\% en 2020 (Gartner)
-  \imgtw{Machine-Learning-Cybersécurité}{0.8}
+  \V{["Machine-Learning-Cybersécurité", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -24,10 +24,10 @@
   \newline
   \newline
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{cylance}{0.8}
+    \V{["cylance", "tw", 0.8] | image}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{deepinstinct-2}{0.8}
+    \V{["deepinstinct-2", "tw", 0.8] | image}
   \end{minipage}\hfill
 \end{frame}
 
@@ -39,17 +39,17 @@
   \newline
   \newline
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{windows-defender}{0.8}
+    \V{["windows-defender", "tw", 0.8] | image}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{bad-rabbit}{0.8}
+    \V{["bad-rabbit", "tw", 0.8] | image}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}
   \frametitle{Informatique et Machine Learning}
   Visual Studio IntelliCode (C\#, C++, XAML, Java, Javascript, Python)
-  \imgtw{vs-intellicode-2}{0.8}
+  \V{["vs-intellicode-2", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
