--- a/shared/latex/sectors/sante.tex
+++ b/shared/latex/sectors/sante.tex
@@ -10,13 +10,13 @@
 
 \begin{frame}
   \frametitle{Médecine et machine learning}
-  \imgtw{esante-landscape}{0.9}
+  \V{["esante-landscape", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Diagnostique}
   Analyse d'image, d'ECG, données génomiques et phénotypiques
-  \imgtw{esante-solutions}{0.8}
+  \V{["esante-solutions", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -35,7 +35,7 @@
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.34\linewidth}
-    \imgtw{oeil-coupe}{0.8}
+    \V{["oeil-coupe", "tw", 0.8] | image}
   \end{minipage}\hfill
 \end{frame}
 
@@ -75,7 +75,7 @@
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{adn-data}{0.8}
+    \V{["adn-data", "tw", 0.8] | image}
   \end{minipage}\hfill
 \end{frame}
 
@@ -85,10 +85,10 @@
   \newline
   \newline
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{adn-big-data}{0.8}
+    \V{["adn-big-data", "tw", 0.8] | image}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{big-data-documents}{0.8}
+    \V{["big-data-documents", "tw", 0.8] | image}
   \end{minipage}\hfill
 \end{frame}
 
@@ -96,13 +96,13 @@
 \begin{frame}
   \frametitle{Thérapie}
   Découverte de molécules (ReLeaSe, ...) 
-  \imgtw{molecule-release}{0.8}
+  \V{["molecule-release", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Thérapie}
   Modélisation de molécules (DeepMind)
-  \imgtw{foldit}{0.8}
+  \V{["foldit", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -111,24 +111,24 @@
     Simulation biologiques de l'effet de médicaments (IKTOS, Atomwise, ...)
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{iktos-drug-design}{0.8}
+    \V{["iktos-drug-design", "tw", 0.8] | image}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}
   \frametitle{Thérapie}
   Robo-chirurgien (Smart Tissue Autonomous Robot)
-  \imgth{robot-chirurgien}{0.8}
+  \V{["robot-chirurgien", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Thérapie}
   Mécanisme de contrôle de prothèses bioniques
-  \imgtw{bras-bioniques}{0.8}
+  \V{["bras-bioniques", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Thérapie}
   Lunettes pour aveugles (Panda guide, OrCam Technologies)
-  \imgtw{lunettes-pour-aveugle}{0.8}
+  \V{["lunettes-pour-aveugle", "tw", 0.8] | image}
 \end{frame}
