--- a/shared/latex/sequential-data/hmm.tex
+++ b/shared/latex/sequential-data/hmm.tex
@@ -3,7 +3,7 @@
 
   Par exemple : diagnostic, capteur bruité, bourse, achats clients
 
-  \imgth{hmm-model-weather}{0.6}
+  \V{["hmm-model-weather", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Définition}
