--- a/shared/latex/sequential-data/sequential-data.tex
+++ b/shared/latex/sequential-data/sequential-data.tex
@@ -42,11 +42,11 @@
 \end{frame}
 
 \begin{frame}{Types de données séquentielles --- son}
-  \imgth{fourier}{0.7}  
+  \V{["fourier", "th", 0.7] | image}  
 \end{frame}
 
 \begin{frame}{Types de données séquentielles --- vidéo}
-  \imgtw{video-frames}{0.7}
+  \V{["video-frames", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Types de données séquentielles --- et bien d'autres}
