--- a/shared/latex/sequential-data/sequential-models.tex
+++ b/shared/latex/sequential-data/sequential-models.tex
@@ -16,8 +16,8 @@
   output : positif ou négatif (cas binaire)
 
   \begin{itemize}
-    \item Son (chant d'oiseau, personne, genre musical, ...)
-    \item Vidéos (film, documentaire, stand up , ...)
+    \item Son (chant d'oiseau, personne, genre musical, …)
+    \item Vidéos (film, documentaire, stand up, …)
   \end{itemize}
 \end{frame}
 
