--- a/shared/latex/supervised/bayes-networks.tex
+++ b/shared/latex/supervised/bayes-networks.tex
@@ -1,7 +1,7 @@
 \begin{frame}
   \frametitle{Réseaux Bayésiens}
   Graphe orienté acyclique
-  \imgth{bayesian-net}{0.6}
+  \V{["bayesian-net", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
@@ -30,5 +30,5 @@
   \item Détection d'anomalie
   \item ...
   \end{itemize}
-  \imgth{graph-oriented}{0.5}
+  \V{["graph-oriented", "th", 0.5] | image}
 \end{frame}
