--- a/shared/latex/supervised/classification.tex
+++ b/shared/latex/supervised/classification.tex
@@ -1,16 +1,16 @@
 \begin{frame}
   \frametitle{Classification}
-  \imgtw{variables}{0.8}
+  \V{["variables", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Classification}
-  \imgtw{mnist}{0.65}
+  \V{["mnist", "tw", 0.65] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Classification}
-  \imgtw{caltech256}{0.8}
+  \V{["caltech256", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
