--- a/shared/latex/supervised/gaussian-mixture.tex
+++ b/shared/latex/supervised/gaussian-mixture.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Mixture de Gaussiennes}
-  \imgtw{gaussian-mixture-univariate}{0.8}
+  \V{["gaussian-mixture-univariate", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
