--- a/shared/latex/supervised/hmm.tex
+++ b/shared/latex/supervised/hmm.tex
@@ -3,7 +3,7 @@
 
   Par exemple : diagnostic, capteur bruité, bourse, achats clients
 
-  \imgth{markov/hmm}{0.7}
+  \V{["markov/hmm", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Définition}
