--- a/shared/latex/supervised/random-forest.tex
+++ b/shared/latex/supervised/random-forest.tex
@@ -41,7 +41,7 @@
 
 \begin{frame}
   \frametitle{Random Forest}
-  \imgtw{random-forest-full}{1.05}
+  \V{["random-forest-full", "tw", 1.05] | image}
 \end{frame}
 
 \begin{frame}
