--- a/shared/latex/supervised/svm.tex
+++ b/shared/latex/supervised/svm.tex
@@ -1,41 +1,41 @@
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw{separable-problem-linear}{0.8}
+  \V{["separable-problem-linear", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw{separable-problem-linear-solution}{0.8}
+  \V{["separable-problem-linear-solution", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw{separable-problem-linear-solution-bad}{0.8}
+  \V{["separable-problem-linear-solution-bad", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw{separable-problem-linear-svm}{0.8}
+  \V{["separable-problem-linear-svm", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw{svm-schema}{0.9}
+  \V{["svm-schema", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw{separable-problem-nonlinear}{0.8}
+  \V{["separable-problem-nonlinear", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw{separable-problem-nonlinear-solution}{0.8}
+  \V{["separable-problem-nonlinear-solution", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \imgtw{separable-problem-nonlinear-kernelsvm}{0.9}
+  \V{["separable-problem-nonlinear-kernelsvm", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
