--- a/shared/latex/template.tex
+++ b/shared/latex/template.tex
@@ -9,7 +9,7 @@
 \begin{frame}
   \frametitle{template}
 
-  \imgtw{logo_mlweek}{0.1}
+  \V{["logo_mlweek", "tw", 0.1] | image}
   
   \begin{itemize}
   \item 
