--- a/shared/latex/tools/anaconda.tex
+++ b/shared/latex/tools/anaconda.tex
@@ -2,7 +2,7 @@
   \frametitle{Présentation}
   Distribution Python faite pour la \og{}Data Science\fg{}
 
-  \imgtw{anaconda_logo}{0.7}
+  \V{["anaconda_logo", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}
