--- a/shared/latex/tools/cloud-computing.tex
+++ b/shared/latex/tools/cloud-computing.tex
@@ -1,15 +1,15 @@
 \begin{frame}
   \frametitle{Cloud Computing}
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw{aws-logo}{0.4}
+    \V{["aws-logo", "tw", 0.4] | image}
     \small{$\;$} \\
-    \imgtw{gcloud-logo}{0.7}
+    \V{["gcloud-logo", "tw", 0.7] | image}
     \small{$\;$} \\
-    \imgtw{ibm-logo}{0.4}
+    \V{["ibm-logo", "tw", 0.4] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw{azure-logo}{0.5}
-    \imgtw{ovh-logo}{0.5}
-    \imgtw{citrix-logo}{0.5}
+    \V{["azure-logo", "tw", 0.5] | image}
+    \V{["ovh-logo", "tw", 0.5] | image}
+    \V{["citrix-logo", "tw", 0.5] | image}
   \end{minipage}\hfill
 \end{frame}
