--- a/shared/latex/tools/spark.tex
+++ b/shared/latex/tools/spark.tex
@@ -7,5 +7,5 @@
   \item \textbf{Graph X}
   \item \textbf{MLlib}
   \end{itemize}
-  \imgtw{spark-logo}{0.5}
+  \V{["spark-logo", "tw", 0.5] | image}
 \end{frame}
