--- a/shared/latex/unsupervised/anomaly-detection-light.tex
+++ b/shared/latex/unsupervised/anomaly-detection-light.tex
@@ -18,7 +18,7 @@
 
 \begin{frame}
   \frametitle{Modes de détection d'anomalie}
-  \imgtw{anomaly-modes}{.8}
+  \V{["anomaly-modes", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -48,7 +48,7 @@
 
 \begin{frame}
   \frametitle{Détection d'Anomalies}
-  \imgtw{voronoi-airports}{1.0}
+  \V{["voronoi-airports", "tw", 1.0] | image}
 \end{frame}
 
 \begin{frame}
@@ -65,7 +65,7 @@
       \end{itemize}
     \end{column}
     \begin{column}{.3\tw}
-      \imgtw{lof-density}{1}
+      \V{["lof-density", "tw", 1] | image}
     \end{column}
   \end{columns}
   \onslide<+->{→ Anomalie si le ratio moyen d'atteignabilité est
@@ -74,7 +74,7 @@
 
 \begin{frame}
   \frametitle{Local Outlier Factor}
-  \imgtw{lof}{.7}
+  \V{["lof", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}
@@ -99,6 +99,6 @@
 
 \begin{frame}
   \frametitle{Isolation forest}
-  \imgtw{isolation-forest}{.9}
+  \V{["isolation-forest", "tw", 0.9] | image}
 \end{frame}
 
