--- a/shared/latex/unsupervised/dbscan.tex
+++ b/shared/latex/unsupervised/dbscan.tex
@@ -24,37 +24,37 @@
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw{dbscan-1}{0.9}
+  \V{["dbscan-1", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw{dbscan-2}{0.9}
+  \V{["dbscan-2", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw{dbscan-3}{0.9}
+  \V{["dbscan-3", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw{dbscan-4}{0.9}
+  \V{["dbscan-4", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw{dbscan-5}{0.9}
+  \V{["dbscan-5", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw{dbscan-6}{0.9}
+  \V{["dbscan-6", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw{dbscan-7}{0.9}
+  \V{["dbscan-7", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw{dbscan-8}{0.9}
+  \V{["dbscan-8", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{DBSCAN --- Démonstration}
-  \imgtw{dbscan-9}{0.9}
+  \V{["dbscan-9", "tw", 0.9] | image}
 \end{frame}
