--- a/shared/latex/unsupervised/kmeans-gaussian.tex
+++ b/shared/latex/unsupervised/kmeans-gaussian.tex
@@ -1,6 +1,6 @@
 \begin{frame}{K-Means --- Introduction}
   Algorithme EM
-  \imgth{cluster-2}{0.8}
+  \V{["cluster-2", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{K-Means --- Algorithme}
@@ -22,7 +22,7 @@
 \begin{frame}
   \frametitle{K-Means --- Distance}
   distance euclidienne, Manhattan, Chebychev
-  \imgtw{distances-euclidienne-manahattan-chebychev}{0.9}
+  \V{["distances-euclidienne-manahattan-chebychev", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{K-Means++}
@@ -43,7 +43,7 @@
 \begin{frame}
   \frametitle{Gaussian Mixture Model --- Introduction}
   Les clusters sont représentés par un centre et une matrice de covariance.
-  \imgtw{gaussian-mixture}{0.7}
+  \V{["gaussian-mixture", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}
