--- a/shared/latex/unsupervised/pca-variantes.tex
+++ b/shared/latex/unsupervised/pca-variantes.tex
@@ -14,6 +14,6 @@
 \fmg{\begin{frame}
   \frametitle{Analyse Factorielle des Correspondances (AFC)}
   Méthode sur un tableau de contingence :
-  \imgtw{tableau-contingence}{0.8}
+  \V{["tableau-contingence", "tw", 0.8] | image}
   On procède alors à une double ACP (une sur le profil ligne, l'autre sur le profil colonne) en utilisant une métrique particulière : le $\chi^2$
 \end{frame}}
