--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -1,13 +1,13 @@
 \begin{frame}{Prédiction pour la prévention}
   Grande-Bretagne~: Predpol (abandonné), National Data Analytics Solution (NDAS) en mars 2019.
 
-  \imgtw{minorit-report}{0.8}
+  \V{["minorit-report", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Détection de mensonges à la frontière}
   Projet pilote en Hongrie, Lettonie et Grèce (iBorderCtrl).
 
-  \imgtw{airport-lie-detection}{0.8}
+  \V{["airport-lie-detection", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Caméras de vidéo-surveillance}
@@ -19,41 +19,41 @@
   \end{itemize}
 
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{chine-orwell}{1}
+    \V{["chine-orwell", "tw", 1] | image}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{chinese-street-surveillance}{1}
+    \V{["chinese-street-surveillance", "tw", 1] | image}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}{Reconnaissance faciale}
-  \imgtw{chine-reco-face-fail}{1}
+  \V{["chine-reco-face-fail", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Automatisation du processus de recrutement}
-  \imgtw{amazon-ai-favor-men}{0.8}
+  \V{["amazon-ai-favor-men", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Préférence sexuelles à partir d'une photo ?}
-  \imgtw{gay-or-not}{0.8}
+  \V{["gay-or-not", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Évaluer une Baby-sitter en fonction de son activité en ligne?}
-  \imgtw{baby-sitter-reliable}{0.8}
+  \V{["baby-sitter-reliable", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Traque de la Chine de ses musulmans du Xinjiang}
   Classement automatique en 36 catégories à partir de toutes les données possibles.
 
-  \imgtw{chine-musulmans-traque}{0.8}
+  \V{["chine-musulmans-traque", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Génération de texte au niveau humain}
   OpenAI~: GPT-3 est «~trop~» performant pour la génération de texte.
-  \imgtw{openai-gpt2-example}{0.8}
+  \V{["openai-gpt2-example", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Les problèmes éthiques}
   Deepfake : «~Zao~»
-  \imgtw{zao-deepfake}{0.8}
+  \V{["zao-deepfake", "tw", 0.8] | image}
 \end{frame}
