--- a/shared/latex/neural-networks/cnn-model.tex
+++ b/shared/latex/neural-networks/cnn-model.tex
@@ -1,24 +1,24 @@
 \begin{frame}{Prérequis --- Opérateur de convolution}
-  \imgtw{convolution}{0.8}
+  \V{["convolution", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Prérequis --- Opérateur de pooling}
-  \imgtw{pooling}{0.8}
+  \V{["pooling", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Schéma général}
   Réseau de neurones de convolutions (CNN)
-  \imgtw{cnn-schema}{1}
+  \V{["cnn-schema", "tw", 1] | image}
   «~Quelques~» millions de paramètres dans le modèle
 \end{frame}
 
 \begin{frame}{Entraînement}
-  \imgth{gpu-fun}{0.7}
+  \V{["gpu-fun", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Architecture du cortex visuel}
   \begin{minipage}[l]{0.50\linewidth}
-    \imgtw{visual-cortex}{1.0}
+    \V{["visual-cortex", "tw", 1.0] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
     Connexion «~en série~» de couches
