--- a/shared/latex/sectors/intro.tex
+++ b/shared/latex/sectors/intro.tex
@@ -12,10 +12,10 @@
   \end{center}
   $\;$ \\
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{biological-neuron}{1}
+    \V{["biological-neuron", "tw", 1] | image}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{neuron-model}{1}
+    \V{["neuron-model", "tw", 1] | image}
   \end{minipage}\hfill
 \end{frame}
 
@@ -54,5 +54,5 @@
 \begin{frame}
   \frametitle{Les secteurs impactés}
   Journalisme
-  \imgtw{jt-chine}{0.8}
+  \V{["jt-chine", "tw", 0.8] | image}
 \end{frame}
