--- a/shared/latex/sectors/transport.tex
+++ b/shared/latex/sectors/transport.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{La voiture autonome}
-  \imgtw{voiture-autonome-conducteur}{0.8}
+  \V{["voiture-autonome-conducteur", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -10,7 +10,7 @@
     \newline
     Inconvéniants : Hétérogénéité de l'environnement
   \end{center}
-  \imgtw{voiture-autonome-navya}{1}
+  \V{["voiture-autonome-navya", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
@@ -27,7 +27,7 @@
 
 \begin{frame}
   \frametitle{La voiture autonome}
-  \imgtw{voiture-autonome}{0.8}
+  \V{["voiture-autonome", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -39,7 +39,7 @@
   Aucun gagnant !
   \newline
   5/23 arrivent au bout en 2005
-  \imgtw{darpa-grand-challenge}{0.6}
+  \V{["darpa-grand-challenge", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}
@@ -49,7 +49,7 @@
   60 miles en milieu urbain + respect du code de la route (sans gps)
   \newline
   6/35 franchissent la ligne d'arrivée
-  \imgtw{darpa-urban-challenge}{0.8}
+  \V{["darpa-urban-challenge", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -57,7 +57,7 @@
   Google Car (2010)
   \newline
   Projet visant une voiture autonome de niveau 5
-  \imgtw{google-car}{0.8}
+  \V{["google-car", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -66,13 +66,13 @@
   \newline
   Uniquement avec caméra, pas de LIDAR
   \newline
-  \imgtw{tesla-autopilot}{0.6}
+  \V{["tesla-autopilot", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{La voiture autonome}
   Waymo One déployé à Phenix (5 décembre 2018)
-  \imgtw{waymo-one}{0.8}
+  \V{["waymo-one", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -82,17 +82,17 @@
   Au 7 mai 2016 -2ème accident- Autopilot avait parcourus 210 Millions de kilomètres
   \newline
   1 seul (Uber) ou le pilote automatique est mis en cause
-  \imgtw{uber-crash-velo}{0.7}
+  \V{["uber-crash-velo", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{La voiture autonome}
-  \imgtw{voiture-autonome-acteurs}{1}
+  \V{["voiture-autonome-acteurs", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{La voiture autonome}
-  \imgtw{voiture-autonome-changements}{1}
+  \V{["voiture-autonome-changements", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
@@ -106,7 +106,7 @@
 
 \begin{frame}
   \frametitle{Le monde du rail}
-  \imgtw{train-aiguillage}{0.8}
+  \V{["train-aiguillage", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -117,7 +117,7 @@
   \item Maintenance préventive par classification d'images (rails, caténaires, isolateurs, materiel roulant, végétation ...)
   \item Relation client
   \end{itemize}
-  \imgtw{rail-detect-defauts}{0.8}
+  \V{["rail-detect-defauts", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}
@@ -135,7 +135,7 @@
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \imgtw{avion-intelligent}{0.8}
+    \V{["avion-intelligent", "tw", 0.8] | image}
   \end{minipage}\hfill
 \end{frame}
 
