--- a/shared/latex/sequential-data/markov-model.tex
+++ b/shared/latex/sequential-data/markov-model.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Markov Model}
-  \imgth{markov}{0.9}
+  \V{["markov", "th", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Introduction}
@@ -42,7 +42,7 @@
   \item Prédiction de classe : un modèle par classe
   \item Découverte de pattern
   \end{itemize}
-  \imgth{markov}{0.6}
+  \V{["markov", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
@@ -53,5 +53,5 @@
   \item Thermodynamique
   \item Théorie des files d'attente (télécommunication)
   \end{itemize}
-  \imgth{markov}{0.6}
+  \V{["markov", "th", 0.6] | image}
 \end{frame}
