--- a/shared/latex/supervised/cost-error-function.tex
+++ b/shared/latex/supervised/cost-error-function.tex
@@ -12,7 +12,7 @@
   \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.59\linewidth}
-  \imgth{regression-error}{0.7}
+  \V{["regression-error", "th", 0.7] | image}
   \end{minipage}\hfill
 \end{frame}
 
@@ -21,7 +21,7 @@
   \begin{minipage}[l]{0.49\linewidth}
   \begin{center}
     $y = a.x+b$
-    \imgtw{regression-line-1}{0.6}
+    \V{["regression-line-1", "tw", 0.6] | image}
   \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
