--- a/shared/latex/supervised/gradient-boosting.tex
+++ b/shared/latex/supervised/gradient-boosting.tex
@@ -1,7 +1,7 @@
 \begin{frame}
   \frametitle{Introduction}
   Arbres qui s'améliorent successivement.
-  \imgth{tree-training-modes}{.4}
+  \V{["tree-training-modes", "th", 0.4] | image}
 \end{frame}
 
 \begin{frame}
