--- a/shared/latex/supervised/optimisation.tex
+++ b/shared/latex/supervised/optimisation.tex
@@ -9,7 +9,7 @@
   w_i' = w_i - \gamma * grad 
   \]
   où : $0 < \gamma < 1$ (learning rate)
-  \imgtw{gradient}{0.6}
+  \V{["gradient", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}
