--- a/shared/latex/supervised/statistical-approaches.tex
+++ b/shared/latex/supervised/statistical-approaches.tex
@@ -8,19 +8,19 @@
 \begin{frame}{Outils --- Chronogramme}
   Chronogramme : tracé de t $\rightarrow$ X(t) 
 
-  \imgtw{time-serie-chronogramme}{0.9}
+  \V{["time-serie-chronogramme", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Outils --- Lag plot}
   Tracé des points $X_{t - k}$ \& $X_t$ pour détecter les corrélations temporelles
 
   \begin{minipage}[l]{0.499\linewidth}
-    \imgtw{lag-plot-linear}{0.7}
-    \imgtw{lag-plot-sinusoidal}{0.7}
+    \V{["lag-plot-linear", "tw", 0.7] | image}
+    \V{["lag-plot-sinusoidal", "tw", 0.7] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.499\linewidth}
-    \imgtw{lag-plot-white-noise}{0.6}
-    \imgtw{lag-plot-uniform-noise}{0.6}
+    \V{["lag-plot-white-noise", "tw", 0.6] | image}
+    \V{["lag-plot-uniform-noise", "tw", 0.6] | image}
   \end{minipage}\hfill
 \end{frame}
 
@@ -44,7 +44,7 @@
 \end{frame}
 
 \begin{frame}{Premières approches }
-  \imgth{time-serie-decomposition}{0.9}
+  \V{["time-serie-decomposition", "th", 0.9] | image}
 \end{frame}
 
 \begin{frame}{ARMA --- Introduction}
@@ -59,7 +59,7 @@
 
 \begin{frame}{ARMA --- Introduction}
   Exemple de processus non-stationnaires :
-  \imgtw{processus-non-stationnaires}{0.9}
+  \V{["processus-non-stationnaires", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{ARMA --- Composante autoregressive}
