--- a/shared/latex/supervised/trees.tex
+++ b/shared/latex/supervised/trees.tex
@@ -2,7 +2,7 @@
   \frametitle{Introduction}
   Modèle de classification ou regréssion qui classe un input dans une
   de ses feuilles pour rendre sa prédiction :
-  \imgtw{decision-tree-2}{0.9}
+  \V{["decision-tree-2", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
@@ -33,12 +33,12 @@
 
 \begin{frame}
   \frametitle{Arbres de classification}
-  \imgtw{decision-tree-2}{0.9}
+  \V{["decision-tree-2", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Arbres de régression}
-  \imgtw{regression-tree}{0.9}
+  \V{["regression-tree", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
