--- a/shared/latex/tf-keras/tf.tex
+++ b/shared/latex/tf-keras/tf.tex
@@ -1,10 +1,10 @@
 \begin{frame}{Introduction}
-  \imgth{tensorflow_logo}{0.7}
+  \V{["tensorflow_logo", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Structure de l'API}
   \centering
-  \imgtw{tf-api}{1}
+  \V{["tf-api", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Deux styles}
@@ -71,7 +71,7 @@
     \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \imgth{tensorflow}{0.9}
+    \V{["tensorflow", "th", 0.9] | image}
   \end{minipage}\hfill
 \end{frame}
 
