--- a/shared/latex/unsupervised/algorithme-em.tex
+++ b/shared/latex/unsupervised/algorithme-em.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Expectation-Maximisation}
-  \imgtw{clustering}{0.9}
+  \V{["clustering", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
