--- a/shared/latex/unsupervised/clustering-conclusion.tex
+++ b/shared/latex/unsupervised/clustering-conclusion.tex
@@ -1,7 +1,7 @@
 
 \begin{frame}
   \frametitle{Conclusion}
-   \imgtw{clustering-methods-problems-illustration}{1.0}
+   \V{["clustering-methods-problems-illustration", "tw", 1.0] | image}
 \end{frame}
 
 \begin{frame}
@@ -13,5 +13,5 @@
     $\Rightarrow$ \\
     \red{Pas de solution unique !}
   \end{center}
-  \imgtw{pareto}{0.9}
+  \V{["pareto", "tw", 0.9] | image}
 \end{frame}
