--- a/shared/latex/unsupervised/introduction.tex
+++ b/shared/latex/unsupervised/introduction.tex
@@ -2,22 +2,22 @@
   Détection de variables cachées, de \og{}structures\fg{} cachées (clusters, variété topologique (manifold), …)
 
   \begin{minipage}[l]{0.69\linewidth}
-    \imgtw{clustering}{0.9}
+    \V{["clustering", "tw", 0.9] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.29\linewidth}
-    \imgtw{globe-libre}{0.9}
+    \V{["globe-libre", "tw", 0.9] | image}
   \end{minipage}\hfill
 \end{frame}
 
 \begin{frame}{Réduction de Dimensionnalité}
-  \imgth{pca-nuage}{0.8}
+  \V{["pca-nuage", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Clustering}
   Par exemple~: Création de segments de clientèle
-  \imgtw{clustering-clients-2}{0.5}
+  \V{["clustering-clients-2", "tw", 0.5] | image}
 \end{frame}
 
 \begin{frame}{Détection d'anomalie}
-  \imgtw{outlier-fish}{0.9}
+  \V{["outlier-fish", "tw", 0.9] | image}
 \end{frame}
