--- a/shared/latex/unsupervised/pca-classification-hierarchique-composantes-principales.tex
+++ b/shared/latex/unsupervised/pca-classification-hierarchique-composantes-principales.tex
@@ -1,11 +1,11 @@
 \begin{frame}{Classification Hiérarchique sur Composantes Principales}
   Réduction de dimension par PCA, puis clustering hiérarchique.
 
-  \imgth{hybrid-pca-hierarchical}{0.7}
+  \V{["hybrid-pca-hierarchical", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Exemple}
-  \imgth{chcp-us-crime-data}{0.55}
+  \V{["chcp-us-crime-data", "th", 0.55] | image}
 
   Obtenus à partir de données relatives aux crimes aux États-Unis.
 
