--- a/shared/latex/unsupervised/pca-lda.tex
+++ b/shared/latex/unsupervised/pca-lda.tex
@@ -16,11 +16,11 @@
 \end{frame}
 
 \begin{frame}{PCA --- Exemple 1}
-  \imgth{pca-nuage}{0.9}
+  \V{["pca-nuage", "th", 0.9] | image}
 \end{frame}
 
 \begin{frame}{PCA --- Exemple 2}
-  \imgtw{pca-fish}{0.9}
+  \V{["pca-fish", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{PCA --- Point de départ}
@@ -74,9 +74,9 @@
   Maximisation de la variance inter-classes.
 
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw{pca-nuage}{0.8}
+    \V{["pca-nuage", "tw", 0.8] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \imgtw{lda}{1.0}
+    \V{["lda", "tw", 1.0] | image}
   \end{minipage}\hfill
 \end{frame}
